--- a/Labsession-1/index.html
+++ b/Labsession-1/index.html
@@ -53,5 +53,7 @@
         <div class="inner-box" style="color: #222222; text-decoration: underline;"><p>My mission is to build immersive worlds and tools that connect people, spark curiosity, and push the boundaries of what tech can do for creativity.</p></div>
     </div>
     <hr>
+
+    <img src="me.jpeg" alt="My Image" style="width: 200px; height: 200px; border-radius: 50%; display: block; margin: 20px auto; border: 5px solid #1DCD9F;">
 </body>
 </html>
