--- a/Labsession-2/index.html
+++ b/Labsession-2/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <h1>Tribute To:</h1>
     <h1 style="color: red;">IRON MAN</h1>
-    <p class="subtitle">Tony Stark</p>
+    <p class="subtitle" style="color: blue;">Tony Stark</p>
   </header>
 
   <section class="hero">
