added light/dark mode

--- a/Labsession-3/index.html
+++ b/Labsession-3/index.html
@@ -15,7 +15,9 @@
     <img src="me.jpeg" alt="Saurabh's Avatar" class="profile-img">
     <h1>Saurabh</h1>
     <h2>Game Developer</h2>
+    <button>Light Mode</button>
   </header>
+
 
 
   <section id="about">
@@ -120,4 +122,5 @@
     <p>© 2025 Saurabh. All rights reserved.</p>
   </footer>
 </body>
+<script src="script.js"></script>
 </html>
